TP3/table.output
   0  $accept : %entry% $end

   1  file : inst EOF

   2  inst : IDENT AFFECT expr

   3  expr : expr PLUS expr
   4       | expr INF expr
   5       | expr AND expr
   6       | PAROUV expr PARFERM
   7       | IDENT

   8  %entry% : '\001' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . file  (8)

	IDENT  shift 3
	.  error

	file  goto 4
	inst  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	inst : IDENT . AFFECT expr  (2)

	AFFECT  shift 6
	.  error


state 4
	%entry% : '\001' file .  (8)

	.  reduce 8


state 5
	file : inst . EOF  (1)

	EOF  shift 7
	.  error


state 6
	inst : IDENT AFFECT . expr  (2)

	IDENT  shift 8
	PAROUV  shift 9
	.  error

	expr  goto 10


state 7
	file : inst EOF .  (1)

	.  reduce 1


state 8
	expr : IDENT .  (7)

	.  reduce 7


state 9
	expr : PAROUV . expr PARFERM  (6)

	IDENT  shift 8
	PAROUV  shift 9
	.  error

	expr  goto 11


state 10
	inst : IDENT AFFECT expr .  (2)
	expr : expr . PLUS expr  (3)
	expr : expr . INF expr  (4)
	expr : expr . AND expr  (5)

	PLUS  shift 12
	INF  shift 13
	AND  shift 14
	EOF  reduce 2


state 11
	expr : expr . PLUS expr  (3)
	expr : expr . INF expr  (4)
	expr : expr . AND expr  (5)
	expr : PAROUV expr . PARFERM  (6)

	PLUS  shift 12
	INF  shift 13
	AND  shift 14
	PARFERM  shift 15
	.  error


state 12
	expr : expr PLUS . expr  (3)

	IDENT  shift 8
	PAROUV  shift 9
	.  error

	expr  goto 16


state 13
	expr : expr INF . expr  (4)

	IDENT  shift 8
	PAROUV  shift 9
	.  error

	expr  goto 17


state 14
	expr : expr AND . expr  (5)

	IDENT  shift 8
	PAROUV  shift 9
	.  error

	expr  goto 18


state 15
	expr : PAROUV expr PARFERM .  (6)

	.  reduce 6


state 16
	expr : expr . PLUS expr  (3)
	expr : expr PLUS expr .  (3)
	expr : expr . INF expr  (4)
	expr : expr . AND expr  (5)

	.  reduce 3


state 17
	expr : expr . PLUS expr  (3)
	expr : expr . INF expr  (4)
	expr : expr INF expr .  (4)
	expr : expr . AND expr  (5)

	PLUS  shift 12
	EOF  reduce 4
	INF  reduce 4
	AND  reduce 4
	PARFERM  reduce 4


state 18
	expr : expr . PLUS expr  (3)
	expr : expr . INF expr  (4)
	expr : expr . AND expr  (5)
	expr : expr AND expr .  (5)

	PLUS  shift 12
	INF  shift 13
	EOF  reduce 5
	AND  reduce 5
	PARFERM  reduce 5


18 terminals, 5 nonterminals
9 grammar rules, 19 states
